Complete .html and .js files
Functionalities were still missing. Not every error was treated
properly, and there was no hash mode functionality. Now everything
seems to be working

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,28 +6,29 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="lock_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" crossorigin href="assets/output.css" /> -->
     <script src="index.js"></script>
     <title>API Consumer | Fatec RL</title>
     <style>
-	td,th{
-	    padding:5px;
-	}
+	td,th{ padding-right:10px; }
+	.good{ color: green; }
+	.bad{ color: red; }
     </style>
 </head>
 
 <body>
-    <h1>Zero CSS!</h1>
+    <h1>Near-zero CSS</h1>
     <nav>
 	<button>Get All</button>
 	<button>Get(i)</button>
 	<button>Post(user)</button>
 	<button>Put(i,new user)</button>
 	<button>Delete(i)</button>
+	<button>Authenticate(user)</button>
+	<button>Switch to hash version</button>
     </nav>
     <br>
     <form></form>
-    <br>
+    <p></p>
     <table>
 	<thead>
 	    <tr>
